# mldevops_exercise

./: .pre-commit-config.yaml  ex1.ipynb  ex2.ipynb  ex4.ipynb  ex4.py  pyproject.toml  requirements.txt
mlops/: ex1.ipynb  ex1.py  ex2.ipynb  ex2.py  ex2_wandb.ipynb  ex4.ipynb
